--- a/charts/fleet/values.yaml
+++ b/charts/fleet/values.yaml
@@ -5,7 +5,7 @@ image:
 
 agentImage:
   repository: rancher/fleet-agent
-  tag: dev
+  tag: v0.3.3
   imagePullPolicy: IfNotPresent
 
 # For cluster registration the public URL of the Kubernetes API server must be set here
